crates/vescpkg-rs/tests/ui/public_modules_are_shallow.stderr
error[E0603]: module `types` is private
 --> tests/ui/public_modules_are_shallow.rs:1:32
  |
1 | fn takes_config(_: vescpkg_rs::types::CustomConfigImage<2>) {}
  |                                ^^^^^  ----------------- struct `CustomConfigImage` is not publicly re-exported
  |                                |
  |                                private module
  |
note: the module `types` is defined here
 --> <BASE_DIR>/crates/vescpkg-rs/src/lib.rs:148:0

error[E0603]: module `types` is private
 --> tests/ui/public_modules_are_shallow.rs:4:30
  |
4 |     takes_config(vescpkg_rs::types::CustomConfigImage::new([0, 0]));
  |                              ^^^^^  ----------------- struct `CustomConfigImage` is not publicly re-exported
  |                              |
  |                              private module
  |
note: the module `types` is defined here
 --> <BASE_DIR>/crates/vescpkg-rs/src/lib.rs:148:0

error[E0603]: crate `units` is private
 --> tests/ui/public_modules_are_shallow.rs:5:31
  |
5 |     let _: Option<vescpkg_rs::units::Rpm> = None;
  |                               ^^^^^  --- struct `Rpm` is not publicly re-exported
  |                               |
  |                               private crate
  |
note: the crate `units` is defined here
 --> <BASE_DIR>/crates/vescpkg-rs/src/lib.rs:73:4
